# pulsar-plugin

./: .gitignore  AUTHORS.md  CITATION.cff  README.md  config.yaml  main.py  pyproject.toml  test.sh
.github/workflows/: juwels-runner.yaml  juwels-runner.yml  pytest.yaml
exec/: ._models  batch-jsc.sh  config.yaml  exec.py  inputs.py
exec/syn_payload/: train_v0_0_payload_raw.json  train_v0_0_payload_tobe_propagated.json  train_v0_2_payload_raw.json  train_v0_3_payload_raw.json  train_v0_3_payload_tobe_propagated.json  train_v0_4_payload_flux.json  train_v0_4_payload_raw.json  train_v0_5_payload_flux.json  train_v0_6_payload_detected.json  train_v0_6_payload_tobe_propagated.json  train_v0_7_payload_detected.json  train_v0_7_payload_flux.json  train_v0_7_payload_tobe_propagated.json  train_v0_8_payload_detected.json  train_v0_8_payload_flux.json  train_v0_8_payload_raw.json  train_v0_8_payload_tobe_propagated.json  train_v0_9_payload_detected.json  train_v0_9_payload_flux.json  train_v0_9_payload_raw.json  train_v0_9_payload_tobe_propagated.json
exec/syn_runtime/: train_v0_0.json  train_v0_1.json  train_v0_2.json  train_v0_3.json  train_v0_4.json  train_v0_5.json  train_v0_6.json  train_v0_7.json  train_v0_8.json  train_v0_9.json
src/itwinai/plugins/pulsar/: data.py  trainer.py
src/itwinai/plugins/pulsar-plugin/: data.py
tests/: .config-test.yaml  test-pulsar.py  test_pulsar.py
tests/.test_dataset/: train_v0_2_payload_tobe_propagated.json  train_v0_4_payload_detected.json  train_v0_4_payload_tobe_propagated.json  train_v0_5_payload_detected.json  train_v0_5_payload_raw.json  train_v0_5_payload_tobe_propagated.json  train_v0_6_payload_flux.json  train_v0_6_payload_raw.json  train_v0_7_payload_raw.json
