[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulsar-plugin"
version = "0.1.0"
description = "Custom itwinai plug-in for radio astronomy pulsar detection use-case"
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Alex Krochak", email = "o.krochak@fz-juelich.de" }]
dependencies = [
    "itwinai[torch]>=0.3.0",
    "pytest>=8.3.4",
    "pulsarrfi-nn @ git+https://gitlab.com/ml-ppa/pulsarrfi_nn.git@version_0.2#subdirectory=unet_semantic_segmentation",
    "pulsardt @ git+https://gitlab.com/ml-ppa/pulsardt@main",
    "ipywidgets",
    "tqdm>=4.65",
    "numpyencoder>=0.3.0",
    "pyquaternion>=0.9.9",
    "scikit-image>=0.22.0",
    "pyqt6>=6.0",
    "colorama>=0.4.6",
]

[tool.setuptools.packages.find]

# Declare this package as part of the `itwinai.plugins` namespace
where = ["src"]

# Make sure to list all the plugin subfolders here,
# otherwise the plugin may not be installed correctly!
include = [
    "itwinai.plugins.pulsar",
]

# Ruff configuration: https://docs.astral.sh/ruff/configuration/
[tool.ruff]
line-length = 95

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E203"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
